force-app/main/default/objects/ssot__LoyaltyMembershipLifecycle__dlm/fields/ssot__MembershipStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__MembershipStatus__c</fullName>
    <label>Membership Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MembershipStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>