force-app/main/default/objects/ssot__LoyaltyMembershipLifecycle__dlm/fields/ssot__MembershipType__c.field-meta.xml
<CustomField>
    <fullName>ssot__MembershipType__c</fullName>
    <label>Membership Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MembershipType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>