force-app/main/default/objects/ssot__LoyaltyMembershipLifecycle__dlm/fields/ssot__OrderItemId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OrderItemId__c</fullName>
    <label>Order Item</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OrderItemId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>